--- a/index.html
+++ b/index.html
@@ -1,218 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Hub</title>
-    <link rel="stylesheet" href="styles/style.css" />
-    <script
-      src="https://kit.fontawesome.com/c7414cb6d4.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Abel&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <header loading="lazy">
-      <div class="header-container">
-        <div class="logo">
-          <h1>Food Hub <i class="fas fa-hamburger"></i></h1>
-        </div>
-        <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Social Media</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="mealfinder.html">Meal Finder</a></li>
-        </ul>
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-      </div>
-      <div class="hero-banner-title">
-        <h1>Food Hub</h1>
-        <p>Crave it, make it</p>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Food Hub</title>
+  <link rel="stylesheet" href="styles/style.css" />
+  <script src="https://kit.fontawesome.com/c7414cb6d4.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet" />
+</head>
 
-    <main>
-      <div class="main-container">
-        <div class="main-1">
-          <img
-            src="images/main-img.jpg"
-            alt="hamburger and fries img"
-            loading="lazy"
-          />
-        </div>
-        <div class="main-2">
-          <h3>Put spices in your life!</h3>
-          <p>
-            Sit magni consectetur, libero ducimus eos accusantium nobis commodi
-            repudiandae nostrum vero laborum illum ab quos.
-          </p>
-          <br />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
-            omnis vero iusto ratione, sapiente quia? Accusamus cumque
-            consequatur porro, nihil temporibus numquam assumenda ratione vitae
-            quos quidem earum autem, praesentium eveniet voluptates aperiam.
-            Dolores, esse.
-          </p>
-          <br />
-          <p><small>-Insider</small></p>
-        </div>
+<body>
+  <header loading="lazy">
+    <div class="header-container">
+      <div class="logo">
+        <h1>Food Hub <i class="fas fa-hamburger"></i></h1>
       </div>
-    </main>
-    <section>
-      <div class="recipe-container">
-        <img src="images/img2.jpg" alt="showcase-1" loading="lazy" />
-        <img src=" images/img1.jpg" alt="showcase-2" loading="lazy" />
-        <img src="images/img3.jpg" alt="showcase-3" loading="lazy" />
-        <div class="recipe-title">
-          <h3>the food grid.</h3>
-        </div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Social Media</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="mealfinder.html">Meal Finder</a></li>
+      </ul>
+      <div class="hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
       </div>
-    </section>
+    </div>
+    <div class="hero-banner-title">
+      <h1>Food Hub</h1>
+      <p>Crave it, make it</p>
+    </div>
+  </header>
 
-    <section class="menu-section">
-      <div class="menu-container">
-        <div class="menu-card">
-          <div class="menu-food">
-            <img src="images/menu1.jpg" alt="" loading="lazy" />
+  <main>
+    <div class="main-container">
+      <div class="main-1">
+        <img src="images/main-img.jpg" alt="hamburger and fries img" loading="lazy" />
+      </div>
+      <div class="main-2">
+        <h3>Put spices in your life!</h3>
+        <p>
+          Sit magni consectetur, libero ducimus eos accusantium nobis commodi
+          repudiandae nostrum vero laborum illum ab quos.
+        </p>
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
+          omnis vero iusto ratione, sapiente quia? Accusamus cumque
+          consequatur porro, nihil temporibus numquam assumenda ratione vitae
+          quos quidem earum autem, praesentium eveniet voluptates aperiam.
+          Dolores, esse.
+        </p>
+        <br />
+        <p><small>-Insider</small></p>
+      </div>
+    </div>
+  </main>
+  <section>
+    <div class="recipe-container">
+      <img src="images/img2.jpg" alt="showcase-1" loading="lazy" />
+      <img src=" images/img1.jpg" alt="showcase-2" loading="lazy" />
+      <img src="images/img3.jpg" alt="showcase-3" loading="lazy" />
+      <div class="recipe-title">
+        <h3>the food grid.</h3>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="menu-container">
+
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu1.jpg" alt="" loading="lazy" />
+          <div class="menu-dscr">
             <p>El Granada Burger</p>
-            <small
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Inventore veniam labore totam nemo dolorum soluta.</small
-            >
+            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Inventore veniam labore totam nemo dolorum soluta.</small>
             <div class="price-container">
               <p class="food-price">$11.50</p>
             </div>
           </div>
         </div>
-        <div class="menu-card">
-          <div class="menu-food">
-            <img src="images/menu2.jpg" alt="" loading="lazy" />
+      </div>
+
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu2.jpg" alt="" loading="lazy" />
+          <div class="menu-dscr">
             <p>Dynamite Fries</p>
-            <small
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Inventore veniam labore totam nemo dolorum soluta.</small
-            >
+            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Inventore veniam labore totam nemo dolorum soluta.</small>
             <div class="price-container">
               <p class="food-price">$6.99</p>
             </div>
           </div>
         </div>
-        <div class="menu-card">
-          <div class="menu-food">
-            <img src="images/menu-6.jpg" alt="" loading="lazy" />
+      </div>
+
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu-6.jpg" alt="" loading="lazy" />
+          <div class="menu-dscr">
             <p>Mad Yorker Dogs</p>
-            <small
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Inventore veniam labore totam nemo dolorum soluta.</small
-            >
+            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Inventore veniam labore totam nemo dolorum soluta.</small>
             <div class=" price-container">
               <p class="food-price">$7.75</p>
             </div>
           </div>
         </div>
-        <div class="menu-card">
-          <div class="menu-food">
-            <img src="images/menu-4.jpg" alt="" loading="lazy" />
+      </div>
+
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu-4.jpg" alt="" loading="lazy" />
+          <div class="menu-dscr">
             <p>Sweet Mary Sundae</p>
-            <small
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Inventore veniam labore totam nemo dolorum soluta.</small
-            >
+            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Inventore veniam labore totam nemo dolorum soluta.</small>
             <div class="price-container">
               <p class="food-price">$5.25</p>
             </div>
           </div>
         </div>
-        <div class="menu-card">
-          <div class="menu-food">
-            <img src="images/menu-5.jpg" alt="" loading="lazy" />
+      </div>
+
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu-5.jpg" alt="" loading="lazy" />
+          <div class="menu-dscr">
             <p>Everlasting Smoothie</p>
-            <small
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Inventore veniam labore totam nemo dolorum soluta.</small
-            >
+            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Inventore veniam labore totam nemo dolorum soluta.</small>
             <div class="price-container">
               <p class="food-price">$8.99</p>
             </div>
           </div>
         </div>
-        <div class="menu-card">
-          <div class="menu-food">
-            <img src="images/menu-3.webp" alt="" loading="lazy" />
+      </div>
+
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu-3.webp" alt="" loading="lazy" />
+          <div class="menu-dscr">
             <p>Amazonian Skewers</p>
-            <small
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Inventore veniam labore totam nemo dolorum soluta.</small
-            >
+            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Inventore veniam labore totam nemo dolorum soluta.</small>
             <div class="price-container">
               <p class="food-price">$12.49</p>
             </div>
           </div>
         </div>
       </div>
-    </section>
 
-    <footer>
-      <div class="social-media">
-        <div class="social-title">
-          <h3>Connect with us</h3>
-        </div>
-        <div class="social-icons">
-          <i class="fab fa-facebook fa-2x"></i>
-          <i class="fab fa-instagram fa-2x"></i>
-          <i class="fab fa-twitter fa-2x"></i>
-        </div>
-        <div class="newsletter">
-          <h3>Subscribe to our newsletter!</h3>
-          <form action="">
-            <label for="name">Name</label>
-            <input
-              type="text"
-              name="name"
-              id="name"
-              placeholder="Enter your name"
-            />
-            <label for="email">Email</label>
-            <input type="email" placeholder="Enter your email address" />
-          </form>
-        </div>
-      </div>
-      <div class="hours">
-        <div class="day">
-          <h3>OPENING HOURS:</h3>
-          <span>Monday: 8:00 am - 10:00 pm</span>
-        </div>
-        <div class="day">
-          <span>Tuesday: 8:00 am - 10:00 pm</span>
-        </div>
-        <div class="day">
-          <span>Wednesday: 8:00 am - 10:00 pm</span>
-        </div>
-        <div class="day">
-          <span>Thursday: 8:00 am - 10:00 pm</span>
-        </div>
-        <div class="day">
-          <span>Friday: 8:00 am - 10:00 pm</span>
-        </div>
-        <div class="day">
-          <span>Saturday: 8:00 am - 11:00 pm</span>
-        </div>
-        <div class="day">
-          <span>Sunday: 10:00 am - 06:00 pm</span>
-        </div>
-      </div>
-    </footer>
+    </div>
+  </section>
 
-    <script src="app.js"></script>
-  </body>
+  <footer>
+    <div class="social-media">
+      <div class="social-title">
+        <h3>Connect with us</h3>
+      </div>
+      <div class="social-icons">
+        <i class="fab fa-facebook fa-2x"></i>
+        <i class="fab fa-instagram fa-2x"></i>
+        <i class="fab fa-twitter fa-2x"></i>
+      </div>
+      <div class="newsletter">
+        <h3>Subscribe to our newsletter!</h3>
+        <form action="">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" placeholder="Enter your name" />
+          <label for="email">Email</label>
+          <input type="email" placeholder="Enter your email address" />
+        </form>
+      </div>
+    </div>
+    <div class="hours">
+      <div class="day">
+        <h3>OPENING HOURS:</h3>
+        <span>Monday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Tuesday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Wednesday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Thursday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Friday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Saturday: 8:00 am - 11:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Sunday: 10:00 am - 06:00 pm</span>
+      </div>
+    </div>
+  </footer>
+
+  <script src="app.js"></script>
+</body>
+
 </html>
